<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.alpamedev.coupons.common.entities.CouponEntity"/>
        <variable
            name="viewmodel"
            type="com.alpamedev.coupons.mainModule.viewmodel.MainViewModel" />
        <variable
            name="isActive"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/common_padding_xlarge"
        android:paddingVertical="@dimen/common_padding_default"
        tools:context=".mainModule.view.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_create"
            tools:visibility="visible"
            android:onClick="@{() -> viewmodel.saveCoupon()}"
            app:isGone="@{isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConsult"
            app:layout_constraintBottom_toTopOf="@id/guideLine"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_consult"
            android:onClick="@{() -> viewmodel.getCouponByCode()}"
            app:layout_constraintStart_toEndOf="@id/btnCreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideLine"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:couponTitle="@{isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCoupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/main_hint_coupon"
            android:layout_marginBottom="@dimen/common_margin_default"
            app:layout_constraintBottom_toTopOf="@id/btnConsult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.coupon.code}"
                android:contentDescription="@string/main_hint_coupon"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@{isActive ? @string/main_hint_active :  @string/main_hint_description}"
            android:enabled="@{!isActive}"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/tilCoupon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.coupon.description}"
                android:contentDescription="@string/main_hint_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="10% coupon valid for purchases over $10."/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
