<resources>
    <string name="app_name">Coupons</string>
    <string name="main_btn_consult">Consult</string>
    <string name="main_btn_create">Create Coupon</string>
    <string name="main_text_title">Welcome, insert your coupon and then click to consult button</string>
    <string name="main_hint_coupon">Coupon</string>
    <string name="main_hint_description">Description</string>
    <string name="error_unique_code">El cupón ya existe</string>
    <string name="error_invalid_length">El cupón debe tener entre 5 y 10 caracteres</string>
    <string name="error_unknown">Error desconocido al crear cupón</string>
    <string name="main_save_success">Coupon created successfully</string>
    <string name="main_hint_active">cupón activo</string>
    <string name="main_text_create_coupon_title">Coupon available, enter a description and clic Create Coupon</string>
</resources>